Ajuste links inicio
alterei cores das fontes do link e removi marcação de link

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body style="background-color: black;">
     <nav
         style="text-align: center; display: block; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #f44b22; margin-top: auto;">
-        <a href="dia1.html" href="#" style="color: inherit; text-decoration: none;" target="_blank">Dia 1</a>
-        <a href="dia2.html" href="#" style="color: inherit; text-decoration: none;" target="_blank">Dia 2</a>
-        <a href="dia3.html" href="#" style="color: inherit; text-decoration: none;" target="_blank">Dia 3</a>
-        <a href="https://g.co/kgs/VE5ihwH" target="_blank">Saiba mais</a>
-        <a href="#como-chegar">Como chegar?</a>
-        <a href="#edicao-anterior">Edição Anterior</a>
-        <a href="#ingressos">Ingressos</a>
+        <a href="dia1.html" href="#" style="color: inherit; text-decoration: none;" target="_blank">Dia 1 • </a>
+        <a href="dia2.html" href="#" style="color: inherit; text-decoration: none;" target="_blank">Dia 2 • </a>
+        <a href="dia3.html" href="#" style="color: inherit; text-decoration: none;" target="_blank">Dia 3 • </a>
+        <a href="https://g.co/kgs/VE5ihwH" target="_blank" style="color: inherit; text-decoration: none;">Saiba mais • </a>
+        <a href="#como-chegar" style="color: inherit; text-decoration: none;">Como chegar? • </a>
+        <a href="#edicao-anterior" style="color: inherit; text-decoration: none;">Edição Anterior • </a>
+        <a href="#ingressos" style="color: inherit; text-decoration: none;">Ingressos</a>
     </nav>
     <br>
     <img src="lolla-foto2.png" alt="foto-palco" style="display: block; margin: 0 auto; height: 600px;">
